[package]
name = "nexthdl"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"
regex = "1"
num-bigint = "0.4"
anyhow = "1"
thiserror = "1"
