[package]
name = "nexthdl"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[build-dependencies]
lalrpop = "0.19"

[dependencies]
lalrpop-util = "0.19"
regex = "1"
num-bigint = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
serde_json = "1"
rpds = "0.9"
rayon = "1.5"
num-traits = "0.2"
arc-swap = { version = "1.2", features = ["weak"] }
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"
sha2 = { version = "0.9", features = ["asm"] }
parking_lot = "0.11"
z3 = "0.10"
rand = "0.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
